# vision-rv1126-buildroot

./: .gitattributes  .gitignore  .gitlab-ci-ext.yml  .gitlab-ci.yml  CMakeLists.txt  README.md  test_script.sh  upgrade_tool
.github/workflows/: build.yml  main.yml
app/QFacialGate/: desktopview.cpp
app/cvr_app/: CMakeLists.txt  main.c
app/firefly_rkmedia_demo/: CMakeLists.txt  README.md  ffrtsp_demo_test.cc  rkmedia_rtspget_arc_rtsp_test.cc  rkmedia_rtspget_multi_arc_test.cc  rkmedia_rtspget_multi_test.cc  rkmedia_rtspget_multi_venc_rtsp.cc  rkmedia_rtspget_vdec_rknn_venc_rtsp_test.cc  rkmedia_rtspget_vdec_test.cc  rkmedia_rtspget_vdec_venc_rtsp_test.cc  rkmedia_vdec_test.c  rkmedia_vdec_venc_rtsp_test.c  rkmedia_vi_arc_rtsp_test.cc  rkmedia_vi_double_cameras_zbar_test.c  rkmedia_vi_rknn_venc_rtsp_test.c  rkmedia_vi_venc_rtsp_test.c  rkmedia_vi_zbar_test.c
app/firefly_rkmedia_demo/base64/: .main.cpp.swp  Makefile  base64.cpp  base64.h  main.cpp
app/firefly_rkmedia_demo/common/: sample_fake_isp.c
app/firefly_rkmedia_demo/ffrtsp/: rtsp.hh
app/firefly_rkmedia_demo/ffsqlite/: dsqlite.hh
app/firefly_rkmedia_demo/lib/: libharfbuzz-subset.la  libharfbuzz-subset.so.0  libharfbuzz-subset.so.0.20600.4  libharfbuzz.la  libharfbuzz.so.0.20600.4
app/firefly_rkmedia_demo/log_pri/: log_pri.cc  log_pri.hh
app/firefly_rkmedia_demo/rkmedia_rtspget_arc_rtsp_test_sdk/rv1126_qt_bin/: server_rv1126
app/firefly_rkmedia_demo/rkmedia_vi_arc_rtsp_test_sdk/: README.md
app/firefly_rkmedia_demo/rkmedia_vi_arc_rtsp_test_sdk/python_server/: arcPywebservice.py  ip_config.txt
app/firefly_rkmedia_demo/rkmedia_vi_arc_rtsp_test_sdk/python_server/fifo_file/: IpAddress  MacAddress  img
app/firefly_rkmedia_demo/tools/: ffrtsp-nn.cfg  rtsp-nn.cfg
app/firefly_rkmedia_uvc/: README.md
app/firefly_rkmedia_uvc/1126/: CMakeLists.txt  build.sh  firefly_rkmedia_vi_uvc_double_cameras_test.c  firefly_rkmedia_vi_uvc_test.c
app/firefly_rkmedia_uvc/1126/common/: tcp_comm.c  tcp_comm.h
app/firefly_rkmedia_uvc/1126/librkmedia/: libeasymedia.so.1.0.1
app/firefly_rkmedia_uvc/1126/process/: camera_pu_control.cpp
app/firefly_rkmedia_uvc/1126/uvc/: mpi_enc.c  mpi_enc.h  mpp_osd.c  mpp_osd.h  uvc-gadget.c  uvc-gadget.h  uvc_control.c  uvc_encode.cpp  uvc_video.cpp
app/firefly_rockx_demo/: CMakeLists.txt  README.md  S99_rockx  rockx_app.cfg  start_rockx_app.sh
app/firefly_rockx_demo/common/: sample_common_firefly_rkmedia.cpp  sample_common_firefly_rkmedia.h
app/firefly_rockx_demo/ff_netserver/: log.h  netctl.h  udp_broadcast.c
app/firefly_rockx_demo/ffrtsp/: ffrtsp.hh
app/firefly_rockx_demo/licSever/: activation.conf  lic_db.cfg
app/firefly_rockx_demo/pywebservice/linux/: Pywebservice.py  Readme.md  draw.py
app/firefly_rockx_demo/pywebservice/windows/: Readme.md
app/firefly_rockx_demo/pywebservice/windows/src/: Pywebservice.py  draw.py
app/firefly_rockx_demo/src/: rockx_carplate_client.cpp  rockx_carplate_service.cpp  rockx_face_attribute_aenc_venc_rtsp_service.cpp  rockx_face_attribute_client.cpp  rockx_face_attribute_service.cpp  rockx_face_landmark_client.cpp  rockx_face_landmark_service.cpp  rockx_face_masks_detection_client.cpp  rockx_face_masks_detection_service.cpp  rockx_face_recognition_client.cpp  rockx_face_recognition_service.cpp  rockx_head_detection_client.cpp  rockx_head_detection_service.cpp  rockx_object_track_client.cpp  rockx_object_track_service.cpp  rockx_person_detection_client.cpp  rockx_person_detection_service.cpp  rockx_pose_body_client.cpp  rockx_pose_body_service.cpp  rockx_pose_finger_client.cpp  rockx_pose_finger_service.cpp
app/firefly_rockx_demo/tool/linux/: seek_device.c
app/qcamera/: qtcamera.cpp  qtcamera.h
app/rkaiq_switch_mode/: .ffswitchmode_config  Makefile  S49_ffswichmode  check_brightness.sh  rkaiq_switch_mode.cpp  rkpacket.cpp  rkpacket.hpp  rktype.hpp
buildroot/: Makefile
buildroot/configs/: firefly_rv1126_rv1109_cs_r1_arc_defconfig  firefly_rv1126_rv1109_cs_r1_defconfig  firefly_rv1126_rv1109_defconfig  firefly_rv1126_rv1109_facial_gate_defconfig  firefly_rv1126_rv1109_rkmedia_uvcc_defconfig  firefly_rv1126_rv1109_uvcc_defconfig  firefly_rv1126_rv1109_v11_defconfig  firefly_rv1126_rv1109_xhlpr_defconfig  firefly_rv1126_tb_defconfig  rockchip_rv1126_vision_defconfig  rockchip_rv1126_vision_ext_defconfig  rockchip_rv1126_vision_recovery_defconfig  rv1126_custom_board_defconfig
buildroot/dl/: libaacs-0.9.0.tar.bz2  slang-2.3.1a.tar.bz2  wayland-protocols-1.25.tar.xz
buildroot/package/: Config.in  Config.in.host
kernel/: .gitignore  defconfig
rkbin/RKBOOT/: RV1126MINIALL_FIREFLY_LP4_EMMC_TB.ini  RV1126MINIALL_UART_115200.ini
rkbin/tools/: ddrbin_param copy.txt  ddrbin_param.txt  ddrbin_param2.txt
rockdev/: .gitignore  .tmp_its  rootfs.squashfs
rtl8812au/: .88XXau_wfb.ko.cmd  .88XXau_wfb.mod.o.cmd  .88XXau_wfb.o.cmd  .gitignore  88XXau_wfb.ko  88XXau_wfb.mod.c  Makefile  modules.order
rtl8812au/.tmp_versions/: 88XXau_wfb.mod
rtl8812au/core/: .rtw_ap.o.cmd  (+28 more)
u-boot/: .config.old  .gitignore  .u-boot-dtb.img.cmd  .u-boot-nodtb.bin.cmd  .u-boot.cmd  .u-boot.img.cmd  .u-boot.lds.cmd  .u-boot.srec.cmd  .u-boot.sym.cmd  System.map  defconfig  make.sh  tee.digest  u-boot-nodtb.digest  u-boot.cfg  u-boot.cfg.configs  u-boot.dtb  u-boot.lds  u-boot.map  u-boot.srec  u-boot.sym
vision-app/msp/: .gitignore  CMakeLists.txt
vision-app/msp/src/: main.c
vision-app/msp/src/config/: configini.h  test.c
vision-app/msp/src/led/: led.c  led.h
vision-app/msp/src/msp/: msp.c  msp.h  msp_api.c  msp_api.h  msp_interface.c  msp_interface.h  msp_protocol.h  msp_protocol_helper.c  msp_protocol_helper.h
vision-app/msp/src/syslog/: logger.c  logger.h
vision-app/msp/src/telemetry/: bf_telemetry.c  bf_telemetry.h  telemetry.h
vision-app/msp/test/: telemetry_client.c
vision-app/msp2udp/: .gitignore  CMakeLists.txt  main.c  msp.c  msp.h  network.c  network.h  serial.c  serial.h
vision-app/wfb-ng/: CMakeLists.txt
vision-app/wfb-ng/keys/: drone.key  gs.key
vision-app/wfb-ng/src/: keygen.c  rx.cpp  tx.cpp  wifibroadcast.hpp
(+1727 files in other folders)
